--- a/style.css
+++ b/style.css
@@ -4,11 +4,19 @@
   --accent: #facc15;
   --text: #f8fafc;
 }
+
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: "Segoe UI", sans-serif;
   background: var(--bg);
   color: var(--text);
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 header {
   text-align: center;
@@ -90,10 +98,10 @@ header img {
 }
 
 #top-menu-bar {
-    text-align: center;
-    background-color: var(--card);
-    color: var(--text);
-    padding-top: 1rem;
+  text-align: center;
+  background-color: var(--card);
+  color: var(--text);
+  padding-top: 1rem;
 }
 
 #top-menu-bar li {
@@ -123,6 +131,25 @@ header img {
   height: 150px;
   border-radius: 50%;
   margin-bottom: 0.5rem;
+}
+
+#content {
+  flex: 1;
+}
+
+.rubix-face {
+  background-color: #0d0d0d;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  max-width: 200px;
+  padding: 4px;
+  grid-gap: 4px;
+}
+
+.rubix-face div{
+  border: 2px solid #0d0d33;
+  padding-top: 100%;;
+  border-radius: 0.2rem;
 }
 
 footer {
