--- a/game_set/style.css
+++ b/game_set/style.css
@@ -82,6 +82,7 @@ button {
 button:hover {
   background-color: var(--bg);
   color: var(--accent);
+  border: 2px solid var(--accent);
 }
 
 input {
@@ -94,89 +95,26 @@ input {
   color: var(--text);
 }
 
-
-.popup-parent {
-  position: relative;
-  display: inline-block;
-}
-.popup {
-  background: var(--card);
-  border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  padding: 1rem;
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translateX(-30%);
-  z-index: 10;
-  display: none;
-  min-width: 220px;
-  color: var(--text);
-  font-size: 1rem;
-  margin-top: 0.1rem;
-  padding-left: 0.1rem;
-}
-.popup-parent:hover .popup {
-  display: block;
-}
-.popup:hover .popup {
-  display: block;
-}
-
-#top-menu-bar {
-  text-align: center;
-  background-color: var(--card);
-  color: var(--text);
-  padding-top: 1rem;
-}
-
-#top-menu-bar li {
-  display: inline;
-  margin: 1rem;
-}
-
-#top-menu-bar a {
-  color: var(--accent);
-  padding: 0.1rem 0.5rem;
-  text-decoration: none;
-  transition: 0s;
-}
-
-#top-menu-bar a:visited {
-  color: var(--accent);
-}
-
-#top-menu-bar a:hover {
-  background-color: var(--accent);
-  color: var(--bg);
-  border-radius: 5px;
-}
-
-#avatar {
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  margin-bottom: 0.5rem;
-}
-
 #content {
   flex: 1;
 }
 
-.rubix-face {
-  background-color: #0d0d0d;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  max-width: 200px;
-  padding: 4px;
-  grid-gap: 4px;
+main#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* vertical centering */
+    align-items: center;     /* horizontal centering */
+    min-height: 60vh;        /* adjust as needed */
 }
 
-.rubix-face div{
-  border: 2px solid #0d0d33;
-  padding-top: 100%;;
-  border-radius: 0.2rem;
-  transition: 1s;
+#game-container {
+  width: 100vw;
+  height: 80vh;
+  margin: auto;
+  display: block;
+  background: #111;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 footer {
