--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ input {
   color: var(--text);
   font-size: 1rem;
   margin-top: 0.1rem;
-  padding-left: 0.1rem;
+  outline: var(--accent) solid 2px;
 }
 .popup-parent:hover .popup {
   display: block;
