--- a/games/set/style.css
+++ b/games/set/style.css
@@ -57,3 +57,20 @@
     margin: 0;
     padding: 0;
 }
+
+
+button {
+  background-color: var(--overlay-bg);
+  color: var(--overlay-text);
+  border: "solid 2px";
+  border-color: var(--overlay-bg);
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: var(--overlay-text);
+  color: var(--overlay-bg);
+}
